--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>مرحبا بكم في موقعي</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to left, #f5f5f5, #e0e0e0);
-      text-align: center;
-      padding: 50px;
-      direction: rtl;
-    }
-    h1 {
-      color: #333;
-    }
-    p {
-      color: #555;
-    }
-    .btn {
-      margin-top: 20px;
-      padding: 12px 24px;
-      background-color: #1976d2;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .btn:hover {
-      background-color: #125aa8;
-    }
-  </style>
-</head>
-<body>
-  <h1>👋 مرحباً بك في موقعي على GitHub Pages</h1>
-  <p>هذا الموقع مستضاف مجانًا باستخدام GitHub Pages.</p>
-  <button class="btn" onclick="alert('شكراً لزيارتك!')">اضغط هنا</button>
-</body>
-</html>
+<div style="background: rgba(255, 255, 255, 0.95); border-radius: 15px; border: 1px solid rgb(224, 224, 224); box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 30px; direction: rtl; font-family: Tahoma, Arial, sans-serif; margin: 30px auto; max-width: 800px; padding: 30px; text-align: right;">
+
+  <h1 style="color: #4285f4; margin-bottom: 20px; text-shadow: rgba(0, 0, 0, 0.1) 1px 1px 3px;">
+    تحميل تطبيق GBWhatsApp Mas V21.96 ضد الحظر بدون ربط الأجهزة
+  </h1>
+
+  <p style="color: #555555; line-height: 1.8; margin-bottom: 25px;">
+    نقدم لكم أحدث إصدار من واتساب GB WhatsApp Mas المعدّل — نسخة خالية من الإعلانات، مضادة للحظر، وتعمل بدون الحاجة لربط الجهاز. تشمل هذه النسخة كافة مميزات GBWhatsApp مع تحسينات إضافية لتجربة مستخدم أفضل.
+  </p>
+
+  <div style="background: rgba(66, 133, 244, 0.05); border-radius: 10px; border: 2px dashed rgb(66, 133, 244); margin-bottom: 25px; padding: 30px; text-align: center;">
+    <h2 style="color: #0f9d58; margin-bottom: 15px;">🔽 رابط تحميل مباشر</h2>
+    <a href="https://www.mediafire.com/file/xxxxx/GBWhatsApp_Mas_v21.96.apk/file" style="background: rgb(15, 157, 88); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px; color: white; display: inline-block; font-size: 18px; font-weight: bold; padding: 15px 30px; text-decoration: none; transition: 0.3s;">
+      تحميل GBWhatsApp Mas V21.96
+    </a>
+  </div>
+
+  <div style="margin-bottom: 30px;">
+    <h3 style="border-bottom: 2px solid rgb(66, 133, 244); color: #4285f4; display: inline-block; padding-bottom: 5px;">✨ مميزات التطبيق:</h3>
+    <ul style="line-height: 1.8; list-style: none; margin-top: 15px; padding: 0px;">
+      <li style="padding-right: 25px; position: relative;">✅ بدون إعلانات مزعجة</li>
+      <li style="padding-right: 25px; position: relative;">✅ دعم كامل للأجهزة القديمة والجديدة</li>
+      <li style="padding-right: 25px; position: relative;">✅ تفعيل سريع بدون ربط الجهاز</li>
+      <li style="padding-right: 25px; position: relative;">✅ مضاد للحظر ومحسن للأداء</li>
+    </ul>
+  </div>
+
+  <div style="margin-bottom: 30px;">
+    <h3 style="border-bottom: 2px solid rgb(244, 180, 0); color: #f4b400; display: inline-block; padding-bottom: 5px;">📌 خطوات التثبيت:</h3>
+    <ol style="line-height: 1.8; padding-right: 20px;">
+      <li>قم بتعطيل Google Play Protect مؤقتًا.</li>
+      <li>ثبّت تطبيق GBWA Activator وقم بتفعيل رقمك.</li>
+      <li>بعد التفعيل، ثبّت تطبيق GBWhatsApp Mas الأساسي.</li>
+    </ol>
+  </div>
+
+  <div style="margin-bottom: 20px;">
+    <h3 style="border-bottom: 2px solid rgb(219, 68, 55); color: #db4437; display: inline-block; padding-bottom: 5px;">⚠️ ملاحظات:</h3>
+    <ul style="line-height: 1.8; list-style: none; padding: 0px;">
+      <li>النسخة الأولى (Activator) تحتوي على إعلانات.</li>
+      <li>النسخة الثانية (Mas) خالية من الإعلانات.</li>
+      <li>لا تحتاج لعمل روت أو صلاحيات إضافية.</li>
+    </ul>
+  </div>
+</div>
